src/less/search.less
/*
* SearXNG, A privacy-respecting, hackable metasearch engine
*/

#search {
  padding: 0;
  margin: 0;
}

#search_header {
  padding-top: 1.5em;
  .ltr-padding-right(2em);
  .ltr-padding-left(@results-offset - 3rem);
  margin: 0;
  background: var(--color-header-background);
  border-bottom: 1px solid var(--color-header-border);
  display: grid;
  gap: 0.7rem 1.2rem;
  grid-template-columns: 3rem 1fr;
  grid-template-areas:
    "logo search"
    "spacer categories";
}

.category_checkbox,
.category_button {
  display: inline-block;
  position: relative;
  .ltr-margin-right(1rem);
  padding: 0;
}

.category_checkbox {
  input {
    display: none;
  }

  label {
    .category_name {
      padding-left: 0.2rem;
      padding-right: 0.13rem;
    }

    cursor: pointer;
    padding: 0.2rem 0;
    display: inline-flex;
    text-transform: capitalize;
    font-size: 0.9em;
    border-bottom: 2px solid transparent;
    .disable-user-select;

    div.category_name {
      margin: auto 0;
    }
  }

  input[type="checkbox"]:checked + label {
    color: var(--color-categories-item-selected-font);
    border-bottom: 2px solid var(--color-categories-item-border-selected);
  }
}

button.category_button {
  background-color: inherit;
  color: var(--color-base-font);
  cursor: pointer;
  margin: 4px !important;
  margin-bottom: 6px !important;
  display: inline-flex;
  align-items: center;
  text-transform: capitalize;
  font-size: 0.9em;
  border: none;
  padding: 8px !important;
  border-radius: 8px;

  .category_name {
    padding-left: 0.2rem;
    padding-right: 0.13rem;
  }

  @media screen and (min-width: @phone) {
    &:first-child {
      margin-left: 0 !important;
    }
  }
  
  &.selected,
  &:active,
  &:focus-within {
    color: var(--color-categories-item-selected-font);
    background: var(--color-search-background);
  }
}

// only used when JavaScript is disabled
.no-js
  #categories_container:has(button.category_button:focus-within)
  button.category_button {
  &.selected {
    color: var(--color-base-font);
    border-bottom: none;
  }

  &:focus-within {
    color: var(--color-categories-item-selected-font);
    border-bottom: 2px solid var(--color-categories-item-border-selected);
  }
}

#search_logo {
  padding: 0.5rem 10px 0 10px;
  grid-area: logo;
  display: flex;
  align-items: center;
  justify-content: center;

  svg {
    flex: 1;
    width: 30px;
    height: 30px;
    margin: 0.5rem 0 auto 0;
    color: var(--color-logo-color, var(--color-logo-fill, var(--color-categories-item-selected-font, var(--color-base-font))));
  }

  svg :not([fill="none"]) {
    fill: var(--color-logo-fill, #3050ff);
  }

  svg :not([stroke="none"]) {
    stroke: var(--color-logo-fill, #3050ff);
  }
}

.search_categories {
  grid-area: categories;

  .help {
    display: none;
  }

  &:hover .help {
    display: block;
    position: absolute;
    background: var(--color-base-background);
    padding: 1rem 0.6rem 0.6rem 0;
    z-index: 1000;
    width: 100%;
    left: -0.1rem;
  }
}

#search_view {
  padding: 0.5rem @search-padding-horizontal 0 @search-padding-horizontal;
  grid-area: search;

  body.results_endpoint & {
    padding: 0.5rem 2.8rem 0 0;
  }
}

.search_box {
  border-radius: 0.9rem;
  width: 100%;
  max-width: @search-width;
  display: inline-flex;
  flex-direction: row;
  white-space: nowrap;
  border: 1px solid var(--color-search-border);
  box-shadow: var(--color-search-shadow);
}

#clear_search {
  display: block;
  border-collapse: separate;
  box-sizing: border-box;
  width: 1.8rem;
  margin: 0;
  padding: 0.8rem 0.2rem;
  background: none repeat scroll 0 0 var(--color-search-background);
  border: none;
  outline: none;
  color: var(--color-search-font);
  font-size: 1.1rem;
  z-index: 1000;

  &:hover {
    color: var(--color-search-background-hover);
  }

  &.empty * {
    display: none;
  }

  &.empty {
    pointer-events: none;
  }
}

html.no-js #clear_search.hide_if_nojs {
  display: none;
}

#q,
#send_search {
  display: block;
  margin: 0;
  padding: 0.8rem;
  background: none repeat scroll 0 0 var(--color-search-background);
  border: none;
  outline: none;
  color: var(--color-search-font);
  font-size: 1.1rem;
  z-index: 100;
}

#q {
  width: 100%;
  .ltr-padding-left(1rem);
  .ltr-padding-right(0) !important;
  .ltr-rounded-left-corners(0.8rem);
}

#q::-ms-clear,
#q::-webkit-search-cancel-button {
  display: none;
}

#send_search {
  .ltr-rounded-right-corners(0.8rem);

  &:hover {
    cursor: pointer;
    background-color: var(--color-search-background-hover);
    color: var(--color-search-background);
  }
}

.no-js #clear_search,
.no-js #send_search {
  width: auto !important;
  .ltr-border-left(1px solid var(--color-search-border));
}

.search_filters {
  margin-top: 0.6rem;
  .ltr-margin-right(0);
  margin-bottom: 0;
  .ltr-margin-left(calc(@results-offset + 0.5em));
  width: calc(@results-width - 1em);
  box-sizing: border-box;
  display: flex;
  overflow-x: auto;
  overscroll-behavior-inline: contain;

  select {
    background-color: inherit;

    &:hover,
    &:focus {
      color: var(--color-base-font);
    }
  }
}

@media screen and (max-width: @tablet) {
  #search_header {
    padding: 1.5em @results-tablet-offset 0 @results-tablet-offset;
    column-gap: @results-tablet-offset;
  }

  .search_filters {
    margin-top: 0.6rem;
    .ltr-margin-right(0);
    margin-bottom: 0;
    .ltr-margin-left(@results-tablet-offset + 3rem);
  }

  #categories {
    font-size: 90%;
    clear: both;
  }
}

@media screen and (max-width: @tablet) and (hover: none) {
  #main_index,
  #main_results {
    #categories_container {
      width: max-content;

      .category_checkbox {
        display: inline-block;
        width: auto;
      }
    }

    #categories {
      width: 100%;
      .ltr-text-align-left();
      overflow: scroll hidden;
      -webkit-overflow-scrolling: touch;
    }
  }
}

@media screen and (max-width: @phone) {
  #search_header {
    width: 100%;
    margin: 0;
    padding: 0.1rem 0 0 0;
    gap: 0 0;
    grid-template-areas:
      "logo search"
      "categories categories";
  }

  .search_logo {
    padding: 0;
  }

  .search_box {
    width: 100%;
  }

  #q {
    width: 100%;
    flex: 1;
  }

  .search_filters {
    margin: 0 10px;
    padding: 0.5rem 0;
    width: calc(100% - 20px);
    min-width: 0;
    overflow-x: hidden;
    flex-wrap: wrap;

    select {
      flex: 1 1 6rem;
      min-width: 0;
      .ltr-margin-right(0.5rem);
      margin-bottom: 0.25rem;
    }
  }

  .category {
    display: inline-block;
    width: auto;
    margin: 0;
  }

  #search_view:focus-within {
    display: block;
    background-color: var(--color-search-background);
    position: absolute;
    top: 0;
    height: 100%;
    width: 100%;
    z-index: 2000;

    .search_box {
      border-bottom: 1px solid var(--color-search-border);
      width: 100%;
      border-radius: 0;
      box-shadow: none;

      #send_search {
        .ltr-margin-right(0) !important; // Delete when send_search button is disabled on mobile.
      }

      * {
        border: none;
        border-radius: 0;
        box-shadow: none;
      }
    }
  }

  #main_results #q:placeholder-shown ~ #send_search {
    .ltr-margin-right(2.6rem);
    transition: margin 0.1s;
  }
}

@media screen and (width <= calc(@small-phone + 3.5em)) {
  .category_name {
    display: none;
  }
}

@media screen and (max-width: @ultra-small-phone) {
  #search_logo {
    display: none;
  }

  #search_header {
    grid-template-areas:
      "search search"
      "categories categories";
  }

  #search_box {
    border-radius: 0;
  }
}

#categories {
  .disable-user-select;

  &::-webkit-scrollbar {
    width: 0;
    height: 0;
  }
}

#categories_container {
  position: relative;
}

article.result {
  background-color: var(--color-result-background);
  border-radius: 0.75em;
  padding: 0.75em;
  margin: 0.5em;
  width: auto;
}

#results #answers {
  .ltr-margin-left(0.5em);
  .ltr-margin-right(0.5em);
}

.infobox {
  background-color: var(--color-result-background) !important;
  border-radius: 0.75em;
  padding: 0.75em;
  margin: 0.5em;
}

article.category-images {
  padding-bottom: 4em;
}

@supports ((background-position-x: 100%) and ((appearance: none) or (-webkit-appearance: none) or (-moz-appearance: none))) {
  html.theme-paulgo select {
    background-image: data-uri('image/svg+xml;charset=UTF-8', @select-dark-svg-path);
  }

  html.theme-frappe select {
    background-image: data-uri('image/svg+xml;charset=UTF-8', @select-dark-svg-path);
  }

  html.theme-macchiato select {
    background-image: data-uri('image/svg+xml;charset=UTF-8', @select-dark-svg-path);
  }

  html.theme-mocha select {
    background-image: data-uri('image/svg+xml;charset=UTF-8', @select-dark-svg-path);
  }

  html.theme-kagi select {
    background-image: data-uri('image/svg+xml;charset=UTF-8', @select-dark-svg-path);
  }

  html.theme-brave select {
    background-image: data-uri('image/svg+xml;charset=UTF-8', @select-dark-svg-path);
  }

  html.theme-moa select {
    background-image: data-uri('image/svg+xml;charset=UTF-8', @select-dark-svg-path);
  }

  html.theme-night select {
    background-image: data-uri('image/svg+xml;charset=UTF-8', @select-dark-svg-path);
  }

  html.theme-dracula select {
    background-image: data-uri('image/svg+xml;charset=UTF-8', @select-dark-svg-path);
  }

  html.theme-gruvbox select {
    background-image: data-uri('image/svg+xml;charset=UTF-8', @select-dark-svg-path);
  }

  html.theme-gruvboxmat select {
    background-image: data-uri('image/svg+xml;charset=UTF-8', @select-dark-svg-path);
  }

  html.theme-everforest select {
    background-image: data-uri('image/svg+xml;charset=UTF-8', @select-dark-svg-path);
  }

  html.theme-evergarden select {
    background-image: data-uri('image/svg+xml;charset=UTF-8', @select-dark-svg-path);
  }

  html.theme-nord select {
    background-image: data-uri('image/svg+xml;charset=UTF-8', @select-dark-svg-path);
  }

  html.theme-matcha select {
    background-image: data-uri('image/svg+xml;charset=UTF-8', @select-dark-svg-path);
  }
}

.favicon img {
  height: 1.5rem;
  width: 1.5rem;
  border-radius: 17%;
  background-color: var(--color-favicon-background-color);
  border: 1px solid var(--color-favicon-border-color);
  display: flex;
}

.altlink {
  display: none;
}

